--- a/cobrowse.html
+++ b/cobrowse.html
@@ -12,6 +12,8 @@
 <body>
   <div id="app">
     <h1>Demo</h1>
+    <input type="text" id="name" placeholder="Enter Name">
+    <input type="text" id="secret" placeholder="Enter Secret" class="hide-me">
   </div>
 </body>
 
