--- a/cobrowse.html
+++ b/cobrowse.html
@@ -6,6 +6,7 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cobrowse SDK Demo</title>
+  <link rel="stylesheet" href="src/style.css" />
   <script type="module" src="/src/cobrowse.js"></script>
 </head>
 
@@ -14,6 +15,9 @@
     <h1>Demo</h1>
     <input type="text" id="name" placeholder="Enter Name">
     <input type="text" id="secret" placeholder="Enter Secret" class="hide-me">
+    <br /><br />
+    <p id="code"></p>
+    <button id="cb-btn" disabled>Loading...</button>
   </div>
 </body>
 
