--- a/iframe.html
+++ b/iframe.html
@@ -9,14 +9,14 @@
 </head>
 
 <body>
-  <iframe width="1024" height="768" src="" id="iframe"
+  <!-- <iframe width="1024" height="768" src="" id="iframe"
     allow="autoplay *; camera *; microphone *; display-capture *; geolocation *;">
-  </iframe>
+  </iframe> -->
   <script>
-    const token = new URLSearchParams(document.location.search).get('token');
+    // const token = new URLSearchParams(document.location.search).get('token');
     // const iframe = document.getElementById('iframe');
     // iframe.src = `https://go-zcb.zoom.us/sdkapi/zcb/frame-templates/desk?access_token=${token}`;
-    document.location.href = `https://go-zcb.zoom.us/sdkapi/zcb/frame-templates/desk?access_token=${token}`;
+    // document.location.href = `https://go-zcb.zoom.us/sdkapi/zcb/frame-templates/desk?access_token=${token}`;
   </script>
 </body>
 
