--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="stylesheet" href="src/style.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cobrowse SDK Demo</title>
 </head>
 
 <body>
-  <div id="app"></div>
-  <h1>Demo</h1>
-  <button id="cb-btn">Start Cobrowse</button>
-  <button id="iframe-btn">Start Iframe</button>
-  <script type="module" src="/src/token.ts"></script>
+  <div id="app">
+    <h1>Demo</h1>
+    <button id="cb-btn">Start Cobrowse</button>
+    <button id="iframe-btn">Start Iframe</button>
+    <script type="module" src="./src/token.js"></script>
+  </div>
 </body>
 
 </html>
