--- a/cobrowse.html
+++ b/cobrowse.html
@@ -7,6 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cobrowse SDK Demo</title>
   <link rel="stylesheet" href="src/style.css" />
+  <script type="module">
+    const sdkKey = import.meta.env.VITE_ZOOM_COBROWSE_SDK_KEY;
+    (function (r, a, b, f, c, d) { r[f] = r[f] || { init: function () { r.ZoomCobrowseSDKInitArgs = arguments } }; var fragment = a.createDocumentFragment(); function loadJs(url) { c = a.createElement(b); d = a.getElementsByTagName(b)[0]; c["async"] = false; c.src = url; fragment.appendChild(c) } loadJs(`https://go-zcb.zoom.us/static/resource/sdk/${sdkKey}/js`); d.parentNode.insertBefore(fragment, d) })(window, document, "script", "ZoomCobrowseSDK");
+  </script>
   <script type="module" src="/src/cobrowse.js"></script>
 </head>
 
