feat: scaffold for blog

--- a/agent.html
+++ b/agent.html
@@ -10,14 +10,8 @@
 </head>
 
 <body>
-  <iframe width="1024" height="768" src="" id="iframe"
-    allow="autoplay *; camera *; microphone *; display-capture *; geolocation *;">
-  </iframe>
-  <script>
-    const token = new URLSearchParams(document.location.search).get('token');
-    const iframe = document.getElementById('iframe');
-    iframe.src = `https://zcb.zoom.us/sdkapi/zcb/frame-templates/desk?access_token=${token}`;
-  </script>
+  <h2>Zoom Cobrowse SDK Demo</h2>
+  <h1>Agent Portal</h1>
 </body>
 
 </html>
