feat: update sdk link

--- a/agent.html
+++ b/agent.html
@@ -16,7 +16,7 @@
   <script>
     const token = new URLSearchParams(document.location.search).get('token');
     const iframe = document.getElementById('iframe');
-    iframe.src = `https://zcb.zoom.us/sdkapi/zcb/frame-templates/desk?access_token=${token}`;
+    iframe.src = `https://us01-zcb.zoom.us/sdkapi/zcb/frame-templates/desk?access_token=${token}`;
   </script>
 </body>
 
